# wazuh

./: CHANGELOG.md
.github/ISSUE_TEMPLATE/: release-manual-tests.md
api/api/controllers/: default_controller.py  security_controller.py
api/api/models/: base_model_.py
api/api/spec/: spec.yaml
api/scripts/: wazuh-apid.py
api/test/integration/: conftest.py  test_security_DELETE_endpoints.tavern.yaml  test_security_GET_endpoints.tavern.yaml  test_security_POST_endpoints.tavern.yaml
framework/wazuh/: security.py
framework/wazuh/core/: agent.py  common.py  exception.py  security.py
framework/wazuh/rbac/: orm.py
framework/wazuh/tests/: test_active_response.py  test_agent.py  test_cdb_list.py  test_ciscat.py  test_cluster.py  test_decoder.py  test_logtest.py  test_manager.py  test_mitre.py  test_rootcheck.py  test_rule.py  test_security.py  test_stats.py  test_syscheck.py  test_syscollector.py  test_vulnerability.py
ruleset/decoders/: 0140-kernel_decoders.xml
src/: Doxyfile  Makefile
src/engine/: CMakeLists.txt
src/engine/source/: main.cpp
src/error_messages/: debug_messages.h
src/headers/: agent_op.h
src/init/: pkg_installer.sh  wazuh-client.sh  wazuh-local.sh  wazuh-server.sh
src/os_auth/: main-server.c
src/remoted/: manager.c  secure.c
src/syscheckd/: create_db.c
src/wazuh_db/: wdb.c  wdb.h  wdb_agents.c  wdb_global.c  wdb_integrity.c  wdb_metadata.c  wdb_parser.c
src/wazuh_modules/: wm_database.c
src/win32/: do_upgrade.ps1  wazuh-installer.nsi  wazuh-installer.wxs
tools/cert-creator/: CMakeLists.txt  cert_creation_tool.cpp
(+67 files in other folders)
